2014-01-20  Richard Biener  <rguenther@suse.de>

	PR middle-end/59860
	* gcc.dg/pr59860.c: New testcase.

2014-01-20  Jakub Jelinek  <jakub@redhat.com>

	PR target/59880
	* gcc.target/i386/pr59880.c: New test.

2014-01-20  Renlin Li  <renlin.li@arm.com>

	* gcc.dg/pr44194-1.c: Tweak regexp.

2014-01-19  Steven G. Kargl  <kargl@gcc.gnu.org>

	PR libfortran/59771
	PR libfortran/59774
	PR libfortran/59836
	* gfortran.dg/round_3.f08: New cases added.
	* gfortran.dg/fmt_g_1.f90: New test.

2014-01-19  Uros Bizjak  <ubizjak@gmail.com>

	* g++.dg/pr49718.C: Add "-mno-explicit-relocs" for alpha*-*-* targets.

2014-01-19  Richard Sandiford  <rdsandiford@googlemail.com>

	* gcc.target/mips/pr54240.c: Add -ffat-lto-objects.

2014-01-19  Richard Sandiford  <rdsandiford@googlemail.com>

	* gcc.dg/vect/pr57705.c: Require vect_int.
	* gcc.dg/vect/pr58508.c: Fix order of dg-require-effective-target line.
	* gcc.dg/vect/vect-alias-check.c: Likewise.

2014-01-18  Mikael Morin  <mikael@gcc.gnu.org>

	PR fortran/58007
	* gfortran.dg/unresolved_fixup_1.f90: New test.
	* gfortran.dg/unresolved_fixup_2.f90: New test.

2014-01-18  Jakub Jelinek  <jakub@redhat.com>

	PR target/58944
	* gcc.target/i386/pr58944.c: Drop -march=native from dg-options.
	Remove dg-prune-output lines.

2014-01-17  Jakub Jelinek  <jakub@redhat.com>

	PR middle-end/59706
	* gfortran.dg/pr59706.f90: New test.
	* g++.dg/ext/pr59706.C: New test.

2014-01-17  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/59270
	PR c++/58811
	* g++.dg/cpp0x/decltype-incomplete1.C: New.
	* g++.dg/init/pr58811.C: Likewise.

2014-01-17  Jeff Law  <law@redhat.com>

	PR middle-end/57904
	* gfortran.dg/pr57904.f90: New test.

2014-01-17  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/59269
	* g++.dg/cpp0x/nsdmi-union4.C: New.

2014-01-17  Marek Polacek  <polacek@redhat.com>

	PR c++/59838
	* g++.dg/diagnostic/pr59838.C: New test.

2014-01-17  Marek Polacek  <polacek@redhat.com>

	PR c/58346
	* gcc.dg/pr58346.c: New test.
